add transition between fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="subscriber_inserted_successfully">Subscriber was successfully inserted</string>
     <string name="subscriber_error_to_insert">There was an error when inserting Subscriber</string>
 
+    <!-- SubscriberListFragment -->
+    <string name="subscriber_list_title">Subscriber list</string>
+
 </resources>
