--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,15 @@
     <string name="subscriber_name_hint">Name</string>
     <string name="subscriber_email_hint">E-mail</string>
     <string name="subscriber_add_button">Add</string>
+    <string name="subscriber_edit_button">Update</string>
+    <string name="subscriber_delete_button">Delete</string>
     <string name="subscriber_title">Subscriber</string>
     <string name="subscriber_inserted_successfully">Subscriber was successfully inserted</string>
+    <string name="subscriber_updated_successfully">Subscriber was successfully updated</string>
+    <string name="subscriber_deleted_successfully">Subscriber was successfully deleted</string>
     <string name="subscriber_error_to_insert">There was an error when inserting Subscriber</string>
+    <string name="subscriber_error_to_update">There was an error when updating Subscriber</string>
+    <string name="subscriber_error_to_delete">There was an error when deleting Subscriber</string>
 
     <!-- SubscriberListFragment -->
     <string name="subscriber_list_title">Subscriber list</string>
